# teed

./: .gitignore  .gitmodules  check_img.py  config.toml  eval.py  image_edge_stats.py  index.py  main.ipynb  pyproject.toml  run.py  run_eval_temp.py
data_augmentation/: __init__.py  data_augmentation.py  main.py
synthetic_data/: __init__.py  draw_png.py  draw_shapes.py  synthetic_dataset_generator.py
teed/: dataset.py  loss2.py  main.py  ted.py
teed/activation/: Xsmish.py  __init__.py
teed/utils/: img_processing.py
utils/: image_edge_stats.py  inference.py
