[project]
name = "teed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "kornia>=0.8.0",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.0",
    "scikit-learn>=1.6.1",
    "tensorboard>=2.18.0",
    "thop>=0.1.1.post2209072238",
    "toml>=0.10.2",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
